--- a/Login-Form-Test/index.html
+++ b/Login-Form-Test/index.html
@@ -10,7 +10,9 @@
     <title>Login-Form</title>
   </head>
   <body>
-    <div id="root"></div>
+    <h1 class="heading">Login Form Test!</h1>
+    <div id="root">
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
